suzdalenko alexey mudanzas reto euskadi

--- a/public/index.html
+++ b/public/index.html
@@ -43,8 +43,8 @@ const firebaseConfig = {
     <meta name="description" content="País Vasco Mudanzas Reto, MUDANZAS RETO PAÍS VASCO, MUDANZAS RETO BILBAO, Álava (Araba), Guipúzcoa (Gipuzkoa ), Vizcaya (Bizkaia ) ">
     <meta name="author" content="Google Pages">
 
-   	<meta property="og:site_name" content="Mudanzas Reto" /> 
-   	<meta property="og:site" content="Mudanzas Reto Bilbao y País Vasco, recogida de muebles, vaciado de pisos" /> 
+   	<meta property="og:site_name" content="Mudanzas Reto, Mudanzas Reto Bilbao (Vizcaya) Vitoria-Gasteiz (Álava) San Sebastián (Donostia) (Guipúzcoa) Barakaldo (Vizcaya) Getxo (Vizcaya) Irun (Guipúzcoa)" /> 
+   	<meta property="og:site" content="Mudanzas Reto Bilbao y País Vasco, recogida de muebles, vaciado de pisos, Mudanzas Reto Bilbao (Vizcaya) Vitoria-Gasteiz (Álava) San Sebastián (Donostia) (Guipúzcoa) Barakaldo (Vizcaya) Getxo (Vizcaya) Irun (Guipúzcoa)" /> 
    	<meta property="og:title" content="Mudanzas Reto Bilbao y País Vasco"/> 
    	<meta property="og:description" content="Reto Mudanzas y transportes particulares y empresas, recogida de muebles, vaciado de pisos y garajes, limpieza y más. Mudanzas Reto Bilbao y País Vasco" /> 
    	<meta property="og:image" content="/img/camion.png" /> 
